[package]
name = "ubyte"
version = "0.1.0"
authors = ["Garrett Berg <vitiral@gmail.com>"]
keywords = ["embedded", "no_std", "serialization", "serde"]
license = "MIT"
repository = "https://github.com/vitiral/ubyte"
documentation = "https://docs.rs/ubyte"

[dependencies]

[dependencies.serde]
default-features = false
version = "1.*.*"

[dependencies.byteorder]
default-features = false
version = "1.*.*"

[dev-dependencies]
serde_bytes = "0.10.*"
serde_derive = "1.*.*"

[features]
std = ["serde/std", "byteorder/std"]
default = ["std"]
